@@ -1,3 +1,15 @@
+2012-02-22  Filip Pizlo  <fpizlo@apple.com>
+
+        DFG's logic for emitting a Flush is too convoluted and contains an inaccurate comment
+        https://bugs.webkit.org/show_bug.cgi?id=79334
+
+        Reviewed by Oliver Hunt.
+
+        * dfg/DFGByteCodeParser.cpp:
+        (JSC::DFG::ByteCodeParser::getLocal):
+        (JSC::DFG::ByteCodeParser::getArgument):
+        (JSC::DFG::ByteCodeParser::flush):
+
 2012-02-23  Gavin Barraclough  <barraclough@apple.com>
 
         Object.isSealed / Object.isFrozen don't work for native objects
